Correcciones y pulida | DB

--- a/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
+++ b/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
@@ -12,15 +12,14 @@ Ya sea en la especialización o generalización, los conjuntos de entidades de m
 
 ### Diseño de Restricciones en las Generalizaciones y Especializaciones
 
-1. Restricciones que establecen qué entidades pueden ser miembro de un nivel dado de un conjunto de entidades
-	- **Definido por condición**: Por ejemplo, Todas las entidades que satisfagan la condición:
-		- tipo-cuenta = «cuenta corriente» estarán incluidas en el conjunto de entidades ***cuenta-corriente***.
-	- **Definidos por el usuario**: Las entidades se asignan a un conjunto de entidades dado, por el usuario de la base de datos. Por Ej.: Asignar empleados a grupos de trabajo.
-2. Restricciones que definen si las entidades pueden pertenecer a más de un conjunto de entidades de nivel más bajo en una generalización simple.
+1. **Restricciones por Membresía de Entidad**: Restricciones que establecen qué entidades pueden ser miembro de un nivel dado de un conjunto de entidades.
+	- **Definido por condición**: La pertenencia de una entidad en un conjunto específico está determinada por una condición predefinida. Por ejemplo, en el caso de "*tipo-cuenta = 'cuenta corriente*'", todas las entidades que cumplen con esta condición serán automáticamente clasificadas dentro del conjunto "cuenta-corriente".
+	- **Definidos por el usuario**: Es el usuario quien asigna manualmente las entidades a un conjunto específico. Por ejemplo, un administrador de base de datos puede asignar empleados a diferentes grupos de trabajo según criterios que pueden no estar explícitamente definidos por los datos mismos.
+2. **Restricciones de Generalización Simple**: Restricciones que definen si las entidades pueden pertenecer a más de un conjunto de entidades de nivel más bajo en una generalización simple.
 	- **Disjuntos**: Una entidad pertenece solo y únicamente a un conjunto entidad de nivel más bajo.
 	- **Solapados**: Una entidad puede pertenecer a más de un conjunto entidad de nivel más bajo.
-3. Restricción de completitud en una generalización o especialización, especifica si un conjunto de entidades de ***nivel más alto*** debe pertenecer o no a al menos a uno de los conjuntos de entidades de nivel más bajo en una generalización/especialización.
-	- **Total**: Cada entidad de nivel más alto debe pertenecer a un conjunto de entidades de nivel más bajo.
+3. **Restricción de Completitud**: Restricciones que especifican si cada entidad de nivel superior debe o no pertenecer al menos a uno de los conjuntos de entidades de nivel más bajo.
+	- **Total**: Cada entidad de nivel más alto debe pertenecer obligatoriamente a un conjunto de entidades de nivel más bajo.
 	- **Parcial**: Algunas entidades de nivel más alto pueden no pertenecer a algún conjunto de entidades de nivel más bajo.
 
 ## Agregación
