--- a/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
@@ -7,7 +7,7 @@ La fase inicial del diseño de bases de datos consiste en caracterizar completam
 
 Una base de datos conformada por un diagrama Entidad-Relación se puede representar como una colección de tablas. Por cada conjunto entidad y conjunto relación, existe una única tabla a la que se le asigna el nombre de conjunto entidad o relación, cada tabla tiene $n$ cantidad de columnas con nombres únicos, generalmente correspondiente a los atributos.
 La conversión de un diagrama Entidad-Relación a formato de tablas, es la base para la derivación de un diseño de una base de datos relacional.
-La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de entidad o relación y la cardinalidad y su participación en una relación.
+La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de entidad o relación, la cardinalidad que estos poseen y su participación en una relación.
 
 - Un ***conjunto de entidades débiles*** se representa como una tabla con una columna por cada atributo de la entidad, y además, los atributos que componen la *clave primaria* de la entidad fuerte que lo identifica.
 
@@ -23,21 +23,21 @@ La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de ent
 >$$
 >Por lo que la tabla $I$ no sería necesaria, es decir, se obvia el realizar una tabla para relación.
 
-- Una relación $R$ entre los conjuntos de entidades $A$, $B$, $C$, se representa como una tabla $R$, con una columna por cada atributo de $R \{a_1, \dotsm , a_n\} \cup \{K_A, K_B, K_C\}$, donde $K_A$, $K_B$, $K_C$, son los atributos que forman las claves primarias de las entidades $A$, $B$ y $C$ respectivamente.
-- Para las relaciones varios a varios, va a existir una tabla para cada conjunto de entidades pertenecientes a la relación y una tabla con el nombre de la relación, cuyos componentes serán las claves primarias de las entidades participantes la relación.
+- Una relación $R$ entre los conjuntos de entidades $A$, $B$, $C$, se representa como una tabla $R$, con una columna por cada atributo de $R \{a_1, \dotsm , a_n\} \cup \{K_A, K_B, K_C\}$, donde $K_A$, $K_B$, $K_C$, son los atributos que forman las claves primarias de los conjuntos de entidades $A$, $B$ y $C$ respectivamente.
+- Para las relaciones varios a varios, va a existir una tabla para cada conjunto de entidades pertenecientes a la relación y una tabla con el nombre de la relación, cuyos componentes serán las claves primarias de los conjuntos de entidades participantes de dicha relación.
 - Para las relaciones de varios a uno y de uno a varios con pertenencia total, se crearán dos tablas, de la cual una de ellas contendrá todos los atributos de la relación, agregando para cada entidad un atributo extra que representaría la clave primaria de la entidad con la que se está relacionando.
 
 ![[varios-uno.png]]
 
-- Para las relaciones uno a uno con participación total de ambos lados y en las relaciones uno a unos normales, se crearán dos tablas que contendrán todos sus atributos correspondientes y una de esas tablas tendrá un atributo más que será la clave primaria de la otra entidad con la que se esté relacionando. Cabe aclarar que la decisión de qué entidad contendrá la clave foránea va a depender del dominio del problema y de la regla de normalización que apliquemos.
+- Para las relaciones uno a uno con participación total de ambos lados y en las relaciones uno a unos normales, se crearán dos tablas que contendrán todos sus atributos correspondientes. Una de esas tablas tendrá un atributo más que será la clave primaria del otro conjunto de entidades con el que se esta relacionando. Cabe aclarar que la decisión de qué entidad contendrá la clave foránea va a depender del dominio del problema y de la regla de normalización que apliquemos.
 
 ![[uno-uno-total.png]]
 
 - Los atributos compuestos se representan de manera plana, separando un atributo por cada componente del atributo compuesto, es decir, cada componente del atributo se representa como una columna de la tabla.
-- Un atributo multivaluado $M$ de una entidad $E$ se representa con una tabla separada $M$ con una columna por cada uno de los atributos, tal que $\{A_M \cup CP_E\}$, donde $A_M$ hace referencia a los múltiples valores de $M$ y $CP_E$ corresponde al conjunto de atributos que corresponden la clave primaria de la tabla $E$, esto quiere decir que esta tabla no poseerá ninguna clave primaria.
-- Para las relaciones recursivas, es decir, aquellas entidades que tengan una relación consigo misma, se las va a representar de formas diferentes de acuerdo a la aridad que posea dicha relación.
-	- Si la relación es de uno a varios, se puede agregar un atributo más a la entidad que haga referencia, mediante su clave primaria, a otra fila de la tabla, por ejemplo, un empleado puede ser jefe de otros empleados, en este caso podemos agregar un atributo **jefe** a la tabla de empleados, la cual contendrá el identificador de otro empleado de la misma tabla.
-	- Si la relación es de varios a varios, se crea una tabla intermedia que contenga los atributos de la relación (en caso de que dicha relación tenga atributos) y las claves primarias de ambas entidades.
+- Un atributo multivaluado $M$ de una entidad $E$ se representa con una tabla separada $M$ con una columna por cada uno sus atributos, tal que $\{A_M \cup CP_E\}$, donde $A_M$ hace referencia a los múltiples valores de $M$ y $CP_E$ corresponde al conjunto de atributos que corresponden la clave primaria de la tabla $E$, esto quiere decir que esta tabla no poseerá ninguna clave primaria.
+- Para las relaciones recursivas, es decir, aquellos conjuntos de entidades que tengan una relación consigo mismo, se las va a representar de formas diferentes de acuerdo a la cardinalidad de su relación.
+	- Si la relación es de uno a varios, se puede agregar un atributo más a la tabla que haga referencia, mediante su clave primaria, a otra fila de la misma tabla. Por ejemplo, un empleado puede ser jefe de otros empleados, en este caso podemos agregar un atributo **jefe** a la tabla de empleados, la cual contendrá el identificador de otro empleado de la misma tabla.
+	- Si la relación es de varios a varios, se crea una tabla intermedia que contenga los atributos de la relación (en caso de que dicha relación tenga atributos) y las claves primarias de ambas entidades relacionadas.
 
 #### Representación de la Generalización y Especialización
 
@@ -54,10 +54,10 @@ En aspectos generales, el primer método es más apropiado para casos de general
 
 #### Representación de la Agregación
 
-Recordemos que la agregación nos permite tratar a una relación como si fuera una entidad, permitiendo tener relaciones con otras entidades, la forma de pasar a tablas, la agregación varía de acuerdo a la aridad de la relación.
+Recordemos que la agregación nos permite tratar a una relación como si fuera una entidad, permitiendo tener relaciones con otras entidades, la forma de pasar a tablas a la agregación varía de acuerdo a la cardinalidad de la relación.
 
-- Si la relación es de uno a varios o viceversa, el pasaje se hará de manera similar a la de una relación uno a varios entre dos entidades, con la diferencia que en este caso se deberá agregar un atributo más a la tabla que representa a la relación.
-- Si la relación es de varios a varios, se deberá crear una nueva tabla que contenga los identificadores de la relación y de la entidad con la que se está relacionando.
+- Si la relación es de uno a varios o viceversa, el pasaje se hará de manera similar a la de una relación uno a varios entre dos conjuntos de entidades, con la diferencia que en este caso se deberá agregar un atributo más a la tabla que representa a la relación.
+- Si la relación es de varios a varios, se deberá crear una nueva tabla que contenga los identificadores de ambos conjuntos de relaciones que se están relacionando.
 
 >[!caution] Identificadores en las Relaciones
->Para el caso de que una relación de agregación sea de varios a varios, suele recomendarse crear una clave única para la tabla correspondiente a la relación, debido a que por lo general las claves primarias de una relación están compuestas por un par de claves primarias de las entidades que se están relacionando, lo cual es mucho más complejo de manejar y torna las consultas a las bases de datos más engorrosas.
+>Para el caso de que una relación de agregación sea de varios a varios, suele recomendarse crear una clave única para al menos una de las tablas que se están relacionando, debido a que por lo general las claves primarias de una conjunto de relaciones están conformadas por el par de claves primarias de los conjuntos de entidades que se están relacionando, lo cual es mucho más complejo de manejar y torna las consultas a las bases de datos más engorrosas.
