--- a/4º Año/Bases de Datos/Unidad 5/1. Seguridad en Bases de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 5/1. Seguridad en Bases de Datos.md
@@ -17,12 +17,12 @@ El usuario DBA es un usuario de nivel superior que tiene los privilegios necesar
 ### Roles y Otorgación de Privilegios
 
 Los administradores de las bases de datos utilizan la sentencia `GRANT` para otorgar privilegios a los demás usuarios o roles que operan la base de datos.
-Los roles por su parte es un nombre que agrupa un conjunto de privilegios, los cuales pueden ser asignados y revocados a múltiples usuarios, facilitando así la gestión de privilegios. Cabe aclarar que un usuario puede poseer múltiples roles, y por más que en dichos roles se repitan algunos privilegios eso no importa el usuario seguirá teniendo ese privilegio. Los roles se crean con la sentencia `CREATE ROLE`, luego el usuario DBA podrá otorgarlo los privilegios correspondientes a ese rol mediante la sentencia `GRANT`.
+Los roles por su parte es un nombre que agrupa un conjunto de privilegios, los cuales pueden ser asignados y revocados a múltiples usuarios, facilitando así la gestión de privilegios. Cabe aclarar que un usuario puede poseer múltiples roles, y por más que en dichos roles se repitan algunos privilegios eso no importa, el usuario seguirá teniendo ese privilegio. Los roles se crean con la sentencia `CREATE ROLE`, luego el usuario DBA podrá otorgarlo los privilegios correspondientes a ese rol mediante la sentencia `GRANT`.
 
 >[!tldr] Cambios de Contraseña y de Usuarios
 >El usuario DBA una vez crea un usuarios, asignando su nombre y contraseña, puede cambiar la contraseña en caso de que lo requiera, eso se puede hacer mediante la sentencia `ALTER USER`. En caso de que otro usuario que no sea el DBA quiera hacerlo este debe contar con esos privilegios.
 
-Como ya mencionamos un privilegio de objeto es el derecho de realizar una acción concreta en una tabla, una vista, una secuencia o un procedimiento determinado. Cada objeto dispone de un juego concreto de privilegios que se pueden otorgar, véase la tabla.
+Como ya mencionamos un privilegio de objeto es el derecho de realizar una acción concreta sobre una tabla, vista, secuencia o un procedimiento determinado. Cada objeto dispone de un juego concreto de privilegios que se pueden otorgar, véase la tabla.
 
 | Privilegios de Objeto | Tabla | Vista | Secuencia | Procedimiento |
 | --------------------- | ----- | ----- | --------- | ------------- |
