Finalmente se termino la unidad 6 | DB

--- a/4º Año/Bases de Datos/Unidad 6/1. Diseño Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 6/1. Diseño Relacional.md
@@ -75,7 +75,7 @@ Se puede simplificar el calculo de $F^+$ agregando las siguientes reglas adicion
 
 Estas reglas adicionales pueden ser inferidas aplicando una combinación de los axiomas de Armstrong.
 
-#### Clausura de un Conjunto de Atributos
+### Clausura de un Conjunto de Atributos
 
 Dado un conjunto de atributos $X$, se define la clausura de $X$ en $F$ como $X_F^+$. Esta clausura representa todos los atributos que pueden ser determinados funcionalmente por $X$ dado el conjunto de dependencias funcionales $F$, tal que $X \rightarrow Y \in F^+ \Rightarrow Y \subseteq X^+$. Esta clausura se puede calcular a través del siguiente algoritmo:
 
