--- a/4º Año/Bases de Datos/Unidad 6/2. Normalizacion y Formas Normales.md
+++ b/4º Año/Bases de Datos/Unidad 6/2. Normalizacion y Formas Normales.md
@@ -55,3 +55,85 @@ No obstante, usar solo el conjunto $F$ es incorrecto cuando se testea una relaci
 >
 >Todos aquellos atributos que no encajen en nunguna de estas áreas, puede que tal vez sean claves candidatas
 
+Para chequear si un esquema $R_i$ en una descomposición de $R$ está en forma normal de Boyce-Codd, se puede hacer de dos maneras:
+
+1. Se puede testear $R_i$ para la forma normal de Boyce-Codd con respecto a la restricción de $F$ a $R_i$, es decir, evaluar si se cumplen todas las dependencias funcionales de $F^+$ que contengan atributos de $R_i$.
+2. Se puede usar el conjunto $F$ original de dependencias funcionales sobre $R$ y testear lo siguiente:
+	- Para cada conjunto de atributos $X \subseteq R_i$, calcular $X^+$ y verificar que esta clausura incluya todos los atributos de $R_i$ o que no incluya ningún atributo de $R_i - X$. Si la condición es violada por algún $X \rightarrow Y$ en el conjunto $F$, la dependencia funcional $X \rightarrow (X^+ -x) \cap R_i$ se mantiene en $R_i$, y $R_i$ viola la forma normal de Bayce-Codd. Por lo que se debe usar las dependencias funcionales anteriores para descomponer $R_i$.
+
+No siempre se podrá obtener una descomposición en la forma normal de Bayce-Codd que preserve todas las dependencias. Por ejemplo, consideremos que tenemos un $R = (A, B, C)$ y un conjunto de dependencias funcionales $F = \{AB \rightarrow C, C \rightarrow B\}$, en base a esas dependencias funcionales y aplicando algunos axiomas de Armstrong, obtenemos que $R$ tiene dos claves candidatas $AB$ y $AC$, por lo tanto $R$ no esta en forma normal de Boyce-Codd. El inconveniente en este caso surge en que independientemente de como descompongamos $R$ nunca se preservará la dependencia funcional $AB \rightarrow C$.
+
+### Tercera Forma Normal
+
+Existen situaciones en donde la forma normal de Boyce-Codd no preserva todas las dependencias y se requiere realizar un chequeo eficiente para corroborar que no se realizo ninguna violación de las dependencias funcionales en alguna actualización.
+La solución a estos problemas es utilizar una forma normal más débil, es decir, menos restrictiva llamada tercera forma normal. Esta forma normal permite algunas redundancias, pero las dependencias funcionales se pueden chequear sobre relaciones individuales. Además siempre va a existir una descomposición en tercera forma normal que cumpla con las propiedades de join sin perdidas y preservación de dependencias.
+
+Un esquema $R$ está en tercera forma normal si para todo $X \rightarrow Y \in F^+$ se cumple al menos una de las siguientes condiciones:
+
+- $X \rightarrow Y$ es trivial.
+- $X$ es una super clave para $R$
+- Cada atributo $A$ en $Y - X$ esta contenido en alguna clave candidata de $R$. Cada atributo puede estar en diferentes claves primarias.
+
+Cabe aclarar que si una relación está en una forma normal de Boyce-Codd está también en tercera forma normal. Además la tercera condición es una relajación de la forma normal de Boyce-Codd para asegurar la preservación de dependencias.
+
+>[!example] Ejemplo de Tercera Forma Normal
+>Retomando el mismo ejemplo anterior donde tenemos un esquema $R = (A, B, C)$ y un conjunto de dependencias funcionales $F = \{AB \rightarrow C, C \rightarrow B\}$ teniendo como claves candidatas $AB$ y $AC$, en este casi la relación cumple con la tercera forma normal, ya que $AB$ es una super clave y $B$ forma parte de una clave candidata.
+>Aunque la relación cumple con la tercera forma normal, todavía puede haber alguna redundancia. Por ejemplo, el valor de $B$ puede determinarse tanto directamente a través de $C$ como combinando $A$ y $B$. Esto podría llevar a inconsistencias si no se manejan adecuadamente las actualizaciones. Para evitar esto se puede descomponer $R$ en $R_1 = (A, C)$ y $R_2 = (C, B)$ siguiendo la forma normal de Boyce-Codd, para verificar que la relación original $AB \rightarrow C$ se cumpla para esta descomposición necesitaremos realizar un `JOIN` entre ambos esquemas.
+
+La ventaja que te brinda la tercera forma normal es que solo se necesita chequear la dependencias funcionales en $F$, evitando así tener que calcular $F^+$ y verificar todas las dependencias. Para realizar este chequeo podemos utilizar las clausuras de atributos para chequear en cada dependencia funcional $X \rightarrow Y$, si $X$ es una super clave. Si $X$ no resulta ser una super clave, debemos verificar que cada atributo en $Y$ forme parte de alguna super clave. Este test es bastante costoso dado que involucra la búsqueda de claves candidatas. Existe un algoritmo que se puede utilizar para calcular la tercera forma normal, en caso que se requiera ver este, se puede recurrir a las filminas.
+
+>[!tldr] Comparación entre Tercera Forma Normal y Forma Normal de Boyce-Codd
+>- Siempre es posible descomponer un esquema en sub-esquemas en tercera forma normal, logrando mantener el join sin perdidas y preservando dependencias.
+>- Siempre es posible descomponer un esquema en sub-esquemas en forma normal de Boyce-Codd, logrando mantener el join sin perdidas pero con el inconveniente de que no siempre es posible preservar dependencias.
+>- Los esquemas que están en tercera forma normal pero no en la forma normal de Boyce-Codd tienen los siguiente problemas:
+>	1. Repretición de Información.
+>	2. Tienen la necesidad de utilizar valores nulos para representar relaciones donde un valor no fue dado. véase el Ejemplo
+>
+>![[3NF-BCNF.png]]
+
+## Dependencias Multivaluadas
+
+Sea $R$ un esquema, donde $X \subseteq R$ y $Y \subseteq R$. La dependencia multivaluada $X \rightarrow \rightarrow Y$ se cumple para $R$ si para cualquier relación legal $r(R)$, para todos los pares de tuplas $t_1, \ t_2 \in r$ tal $t_1[X] = t_2[X]$ entonces deberá existir un par de tuplas $t_3, \ t_4 \in r$ tal que:
+
+- $t_1[X] = t_2[X] = t_3[X] = t_4[X]$
+- $t_3[Y] = t_1[Y] \land t_4[Y] = t_2[Y]$
+- $t_3[Z] = t_2[Z] \land t_4[Z] = t_1[Z]$
+
+donde $Z =  R -X -Y$. Esto significa que los valores en $Y$ asociados con un valor específico en $X$ pueden aparecer con cualquier combinación de valores en $Z$.
+
+>[!tldr] Join sin Perdida para Dependencias Multivaluadas
+>Dado un esquema de relación $R$, siendo $R_1$ y $R_2$ una descomposición de $R$. Sea $G$ un conjunto de dependencias. La descomposición de $R_1$ y $R_2$ tiene join sin perdidas si se cumple al menos una de las siguientes condiciones:
+>
+>1.  $R_1 \cap R_2 \rightarrow \rightarrow R_1 - R_2$
+>2. $R_1 \cap R_2 \rightarrow \rightarrow R_2 - R_1$
+>
+>Esto significa que los atributos en la intersección $R_1 \cap R_2$​ deben determinar los atributos que están en $R_1$​ pero no en $R_2$ y viceversa​.
+
+### Cuarta Forma Normal
+
+Un esquema de relación $R$ está en cuarta forma normal con respecto aun conjunto $G$ de dependencias funcionales y dependencias multivaluadas, si para todas las dependencias multivaluadas de $G^+$ de la forma $X \rightarrow \rightarrow Y$, donde $X \subseteq R$ y $Y \subseteq R$, se cumple algunas de las siguientes condiciones:
+
+1. $X \rightarrow \rightarrow Y$ es trivial, es decir, $Y \subseteq X$ o $X \cup Y = R$.
+2. $X$ es una super clave de $R$.
+
+Un esquema de relación esta en cuarta forma normal, si todas las dependencias no triviales es de la forma llave determina atributo. Si el esquema de relación esta en cuarta forma normal también esta en forma normal de Boyce-Codd.
+Existe un algoritmo que te permite realizar las descomposiciones de los esquemas siguiendo la cuarta forma normal, el algoritmo es el siguiente:
+
+![[algoritmo-4NF.png]]
+
+### Quinta Forma Normal
+
+Una tabla se dice que está en quinta forma normal si y solo si está en cuarta forma normal y cada dependencia de reunión (join) en ella es implicada por las claves candidatas.
+La quinta forma normal implica situaciones en donde una relación de tres vias debe ser reemplazada con tres relaciones binarias, y no con dos como sucede con el caso de cuarta forma normal.
+
+## Metas de Diseño Relacional
+
+Las metas del diseño para una base de datos relacionales son conseguir la forma normal de boyce-Codd, los joins sin perdidas y la preservación de dependencias.
+Si no se puede alcanzar eso, se debe elegir entre carecer de las preservación de dependencias y tener problemas de redundancias debido al uso de la tercera forma normal. SQL no provee una forma directa de especificar dependencias funcionales que no sean las super claves, se puede especificar dependencias funcionales usando aserciones, pero son muy costosas para testear. Aun así tenemos una descomposición que preserva las dependencias funcionales, y usando SQL no sería posible testear de manera eficiente una dependencia funcional cuyo lado izquierdo no sea una clave.
+
+>[!tldr] Testeo de Dependencia funcionales entre Relaciones
+>Si una descomposición no preserva dependencias, podemos tener una vista materializada para cada $X \rightarrow Y \in F_C$ que no está preservada en la descomposición. La vista materializada se define como una proyección en $XY$ del `JOIN`de las relaciones en la descomposición.
+>La dependencia funcional $X \rightarrow Y$ se expresa declarando $X$ como clave candidata en la vista materializada, realizar el chequeo por clave candidata es menos costoso que chequear cada dependencia funcional. Este método tiene el inconveniente de que desperdicia espacio, ya que se tiene que almacenar la vista materializada, provoca una sobrecarga de tiempo debido a que el gestor de la base de datos se encarga de mantener actualizada la vista materializada; además existen sistemas de bases de datos que no permiten realizar declaraciones de claves en las vistas materializadas.
+
+Generalmente el proceso de diseño de una base de datos comienza por el modelo conceptual de este mismo a través de un diagrama de Entidad-Relación, para luego convertir este mismo en tablas, obteniendo así nuestro esquema $R$.
+Este $R$ puede haber sido una relación simple conteniendo todos los atributos de interés y luego se le aplica normalización descomponiendo $R$ es sub-esquemas.
