Todo completo creo | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
@@ -27,6 +27,17 @@ Debido a que este mecanismo puede ser utilizado para realizar ataques como DoS o
 Las direcciones IP tienen una longitud de 32 bits, dándonos una cantidad de $2^{32}$ direcciones IP direccionables. Estas direcciones normalmente se expresan utilizando la notación decimal con punto, en la que cada byte de la dirección se escribe en formato decimal y separada mediante un punto del resto de los bytes de la dirección. Todas las direcciones IP están compuestas por dos partes, la parte de red y la parte de los host, normalmente se suele indicar con una barra la cantidad de bits pertenecientes a la subred en cuestión, por ejemplo la IP 192.168.24.1/24 quiere decir que los primeros 24 bits de la dirección IP corresponden a la subred o también llamada ***prefijo de red***, mientra que los demás bits están disponibles para hacer referencias a los distintos host dentro de esa subred. Comunmente estos últimos bits de menor peso son los que se utilizan para realizar el direccionamiento al host destino. Este método de enrutamiento posee el nombre de ***Enrutamiento entre dominios sin clases*** (CIDR),  el cual permite definir una dirección CIDR más pequeño como por ejemplo de 21 bits para el prefijo de la red y los 11 restantes para identificar a los host de la red, lo que permitía a su vez crear distintas subredes dentro de esa misma red.
 Antes de adoptar el esquema de enrutamiento CIDR, se utilizaba un esquema de direccionamiento conocido como ***direccionamiento con clases***, ya que se dividia a las redes como redes de clase A, B y C, de acuerdo a la cantidad de bytes que utilizaban para identificar a la red. Este esquema era muy ineficiente, ya que comunmente se asignaban direcciones de clase B a empresas que contaban con muchos equipos pero no los suficientes como para cubrir las 65.534 interfaces que proveían las IP de clase B, desperdiciando así gran cantidad de direcciones que no podían ser utilizados por otras organizaciones.
 
+>[!tldr] Direcciones IP Reservadas
+>Las direcciones IP reservadas son aquellas que no se utilizan en Internet público y están reservadas para usos específicos, como redes privadas, pruebas, y otros propósitos especiales.
+>1. **Redes Privadas (RFC 1918)**:
+>	- **10.0.0.0 - 10.255.255.255**: Bloque de direcciones de clase A, utilizado en redes privadas grandes.
+>	- **172.16.0.0 - 172.31.255.255**: Bloque de direcciones de clase B, utilizado en redes privadas medianas.
+>	- **192.168.0.0 - 192.168.255.255**: Bloque de direcciones de clase C, utilizado en redes privadas pequeñas.
+>2. **Loopback (RFC 5735)**:
+>	- **127.0.0.0 - 127.255.255.255**: Utilizado para pruebas de loopback y diagnóstico en la máquina local. La dirección más común es 127.0.0.1.
+>3. **Direcciones Broadcast (RFC 919, RFC 922)**:
+>	- **255.255.255.255**: Utilizada para enviar paquetes a todos los dispositivos en una red local.
+
 #### Dynamic Host Configuration Protocol (DHCP)
 
 Normalmente cuando se obtenía el bloque de direcciones del proveedor de servicios de internet, los administradores de redes eran los encargados de configurar la IP para cada uno de los equipos que integraban la red, aunque en la actualidad esta asignación es hecha automáticamente utilizando el ***protocolo de configuración dinámica de host*** (DHCP), Un administrador de red puede configurar el DHCP para que cada máquina que se conecte a la red siempre reciba la misma dirección IP o se puede configurar para que a cada equipo se le asigne una dirección IP temporal que ira cambiando cada vez que el host se conecte a la red.
@@ -63,6 +74,11 @@ Entre las principales características de esta nueva versión del protocolo son 
 - El campo de las ***opciones*** ya no se incluye en los encabezados, sin embargo las opciones no han desaparecido, siguen estando pero como una de las posibles siguientes cabeceras dentro de la cabecera IPv6, al igual que las cabeceras UDP o TCP pueden ser las siguientes cabeceras dentro del encabezado IP.
 
 En el documento RFC 4443 se ha definido una nueva versión de ICMP para IPv6. Además de reorganizar las definiciones de tipos y códigos ICMP existentes, ICMPv6 también añadió nuevos tipos y códigos requeridos por la nueva funcionalidad de IPv6, entre los que se incluyen el tipo “*Paquete demasiado grande*” y el código de error “*Opciones IPv6 no reconocidas*”. Además, ICMPv6 incluye la funcionalidad del ***Protocolo de gestión de grupos de Internet*** (IGMP).
+
+#### Traducción de IPv4 a IPv6
+
+Al momento de enviar paquetes a través de la red surge el problema de como traducir los paquetes de IPv6 a IPv4, ya que si bien IPv6 es compatible con sus versiones anteriores, IPv4 no es capas de transportar paquetes de IPv6. La forma más fácil y práctica para resolver este problema fue implementando un método de de ***pila dual***, en el cual los nodos IPv6 también disponen de una implementación de IPv4 completa. Estos nodos tienen la capacidad de enviar y recibir paquetes en ambas versiones de protocolo. Los nodos que emplean este método deben contar con los dos tipos de direcciones y ser capas de de determinar en que versión están operando los demás nodos, esto puede lograrse a través de solicitudes de DNS. Debido a que este método obliga a realizar conversiones de IPv6 a IPv4 perdiendo información de los encabezados, se utiliza otro método llamado tunelización.
+La ***tunelización*** puede resolver el problema anteriormente mencionado, la idea básica en la que descansa el método de tunelización es la siguiente; suponga que dos nodos IPv6 desean comunicarse utilizando paquetes IPv6 pero están conectados entre sí a través de routers IPv4. Este conjunto de routers que conectan ambos nodos de IPv6 reciben el nombre de túnel. Mediante la tunelización, el nodo IPv6 del lado emisor del túnel toma el paquete IPv6 completo y lo incluye en el campo de datos del paquete IPv4, de esta forma los distintos nodos IPv4 que conectan a los dos nodos IPv6 pueden realizar el direccionamiento hacia el destino sin perder información. Finalmente el nodo IPv6 del lado receptor del túnel recibe el paquete IPv4, determina que ese paquete contiene un paquete IPv6 en su carga útil, extrae el paquete y procede a encaminarlo utilizando IPv6.
 
 ## Internet Control Message Protocol (ICMP)
 
