Correcciones | DB y Calculo

--- a/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
@@ -63,7 +63,7 @@ SELECT DISTINCT C.nombre_cliente
 - **Funciones de una Fila**: Toman uno o más valores de entrada de una sola fila, y retorna un valor por cada fila. Algunos ejemplos de esto son las funciones `UPPER`, `LOWER` o `ABS` entre muchas otras, estas funciones modifican los valores de las filas de manera independiente.
 - **Función de Agregación**: Las funciones de agregación son funciones que toman una colección de valores como entrada y producen un único valor como salida. SQL cuenta con 5 funciones de agregación primitivas, `AVG`, `MIN`, `MAX`, `SUM` y `COUNT`.
 	- La cláusula `GROUP BY` te permite agrupar los resultados de las funciones de agregación de acuerdo a los atributos especificados. Cuando se utiliza esta cláusula, el `SELECT` solo puede contener los atributos que aparecen en el `GROUP BY` o atributos calculados a partir de otros atributos.
-	- La cláusula `HAVING` te permite especificar predicados para la cláusula `GROUP BY`, ya que el `WHERE` solo se aplica a las relaciones especificadas en la cláusula `FROM`, véase el ejemplo:
+	- La cláusula `HAVING` te permite especificar predicados que deben ser evaluados luego de realizar el agrupamiento, ya que la cláusula `WHERE` siempre se aplica antes de realizar los agrupamientos, véase el ejemplo:
 
 ```sql
 -- Lista a todas las sucursales cuyo saldo medio sea mayor a 1200 dolares
