--- a/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
+++ b/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
@@ -92,7 +92,7 @@ UPDATE cuenta
 >- Una modificación de una vista es válida solo si la vista en cuestión se define en términos de la base de datos relacional real, es decir, la relación no es resultado de una operación de `JOIN`, o una función de agregación.
 >
 >En este contexto, las operaciones de `UPDATE`, `INSERT` y `DELETE` no se podrían realizar para la vista ***total_clientes***, dada como ejemplo anteriormente.
->Si bien esto puede lograrse a través de las las ***vistas materializadas***, las cuales si poseen una tabla propia donde se almacenan los datos. El único percance es que al realizar inserciones, actualizaciones o incluso borrados a las tablas asociadas se debe refrestar la tabla de la vista materializada, lo mismo si se modifican elementos de la vista materializada, se tendrá que actualizar los registros de las respectivas tablas asociadas a esa vista.
+>Si bien esto puede lograrse a través de las las ***vistas materializadas***, las cuales si poseen una tabla propia donde se almacenan los datos. El único percance es que al realizar inserciones, actualizaciones o incluso borrados a las tablas asociadas se debe refrescar la tabla de la vista materializada, lo mismo si se modifican elementos de la vista materializada, se tendrá que actualizar los registros de las respectivas tablas asociadas a esa vista.
 
 ## Integridad en las Bases de Datos
 
