--- a/4º Año/Calculo Numerico/Unidad 2/2. Ecuaciones Lineales.md
+++ b/4º Año/Calculo Numerico/Unidad 2/2. Ecuaciones Lineales.md
@@ -83,6 +83,9 @@ Las condiciones suficientes para que el método de Gauss-Seidel converja es que 
 >$$
 >En donde $k$ indica el número de aproximaciones, para la primera aproximación $X^{(0)}$, no se calcula el error relativo, se hace desde la segunda aproximación en adelante.
 
+>[!caution] Condición de Convergencia
+>Al igual que el método de Jacobi, el método de Gauss-Seidel requieren que la matriz sea diagonal dominante, ya que puede que el método no converja adecuadamente o directamente no converja.
+
 ## Mejora de las Soluciones
 
 Por lo general, el remedio más simple para el mal condicionamiento es emplear más cifras significativas en los cálculos. Eso es posible, si la computadora lo permite, reducirá el problema, pero habrá que gastar más recursos y tiempo, en memoria y en cálculos.
