Completamos el resumen(? | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red y Redes de Area Extensa.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red y Redes de Area Extensa.md
@@ -65,11 +65,12 @@ A lo largo de los años, el estándar X.25 ha sido revisada varias veces para ad
 
 Frame Relay, es un sucesor del protocolo X.25, y al igual que esta, es una tecnología de conmutación de paquete orientada a conexión diseñada para la transmisión eficiente de datos a través de redes WAN. Tanto el tamaño de los paquetes, como de las cabeceras son muy similares a X.25,  las principales características que distinguen a Frame Relay son las siguientes:
 
-- Los paquetes de control se transmiten a través de una conexión lógica distinta de los datos de usuario (fuera de banda).
-- La multiplexación y conmutación de conexiones lógicas se hacen en el nivel 2, siendo más eficiente.
+- Los paquetes de control se transmiten a través de una conexión lógica distinta de los datos de usuario (fuera de banda). e este modo, los nodos intermedios no necesitan mantener tablas de estado ni procesar mensajes relacionados con el control de llamadas individuales.
+- La multiplexación y conmutación de conexiones lógicas se hacen en el nivel 2, eliminándose así una capa completa de procesamiento obteniendo una mayor eficiencia.
 - No existe control de flujo ni de errores a nivel de enlaces individuales. Este control se realiza de extremo a extremo en las capas superiores.
 
-Desde el punto de vista de la red la solución mas simple para solucionar problemas de congestión es eliminar tramas, mientras que desde el del usuario final se trata de transmitir tramas tan rápido como se pueda. Por ello el servicio de Frame Relay emplea un mecanismo de regulación, conocido como ***Tasa de conexión contratada***, la cual es la velocidad en bits/seg. que la red compromete a cumplir en la transmisión de tramas para cada conexión específica. Cualquier trama transmitida por encima del limite especificado por la tasa es marcada por el nodo encendiendo el bit DE, lo que indica que esa trama es susceptible de ser rechazada en caso de congestión. Existe un caudal máximo por encima del cual la trama es siempre rechazada.
+La ventaja de la técnica de retransmisión de tramas es la potencia del proceso de comunicaciones, reduciéndose la funcionalidad del protocolo necesaria en la interfaz *usuario-red* así como el procesamiento interno de red. En consecuencia, cabe esperar un menor retardo y un mayor rendimiento.
+Frame Relay emplea un mecanismo de regulación, conocido como ***Tasa de conexión contratada***, la cual es la velocidad en bits/seg. que la red compromete a cumplir en la transmisión de tramas para cada conexión específica. Cualquier trama transmitida por encima del limite especificado por la tasa es marcada por el nodo encendiendo el bit DE, lo que indica que esa trama es susceptible de ser rechazada en caso de congestión. Existe un caudal máximo por encima del cual la trama es siempre rechazada.
 
 ### Asynchrounous Transfer Mode (ATM) 
 
