Correcciones, aclaraciones | DB

--- a/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
+++ b/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
@@ -37,7 +37,7 @@ A la hora de realizar el diseño del modelo de datos de un sistema surgen una se
 1. Utilizar un atributo o un conjunto de entidades para representar un objeto. Por ejemplo, los números de teléfono de una persona, en caso de ser un atributo, este podría ser multivalorado, un atributo compuesto o incluso ambos. Sin embargo, si el objeto por sí mismo tiene relaciones con otros conjuntos de entidades, este debe representarse como una entidad.
 2. Si una situación puede expresarse más exactamente mediante un conjunto de entidades o mediante un conjunto de relaciones. Recordar que, en los conjuntos de relaciones, cada relación queda identificada unívocamente por las claves de los conjuntos de entidades que participan en la misma.
 3. Si se usa una relación ternaria o si esta se transforma en un par de relaciones binarias. Existen formas de traducir relaciones n-arias en binarias, si bien esto se suele hacer, no es recomendable, ya que siempre se busca representar las situaciones de la forma más acercada a la realidad.
-4. Si se usa un ***conjunto de entidades débiles*** o un **conjunto de entidades fuertes**. Un CEF y sus CED dependientes se pueden considerar como un «objeto» en la base de datos, debido a que la existencia de las entidades débiles depende de las entidades fuertes.
+4. Si se usa un **conjunto de entidades débiles** o un **conjunto de entidades fuertes**. Un CEF y sus CED dependientes se pueden considerar como un «objeto» en la base de datos, debido a que la existencia de las entidades débiles depende de las entidades fuertes.
 	- Si se tomó como parte de un único objeto, puede generar redundancia. Por ejemplo, en Factura-Items, los datos de la factura se repetirían para cada ítem.
 	- Se puede optar por generar claves para las entidades débiles. Por ejemplo: estudios y series de exámenes. Un estudio tiene varios exámenes. Si el número de exámenes es único, sería una relación muchos a uno entre dos conjuntos de entidades fuertes.
 5. Si el uso de la generalización es apropiado. La generalización, o una jerarquía de relaciones *ES*, contribuye a la modularidad por permitir que los atributos comunes de conjuntos de entidades similares se representen en un único lugar en un diagrama E-R.
