--- a/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
@@ -9,8 +9,6 @@ Una base de datos conformada por un diagrama Entidad-Relación se puede represen
 La conversión de un diagrama Entidad-Relación a formato de tablas, es la base para la derivación de un diseño de una base de datos relacional.
 La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de entidad o relación, la cardinalidad que estos poseen y su participación en una relación.
 
-- Un ***conjunto de entidades débiles*** se representa como una tabla con una columna por cada atributo de la entidad, y además, los atributos que componen la *clave primaria* de la entidad fuerte que lo identifica.
-
 >[!tldr] Redundancia de Tablas
 >Existen casos en que puede haber redundancia de tablas, uno de estos casos es la relación de identificación, la cual tiene siempre las siguientes características:
 >1. Es una relación de uno a varios.
@@ -21,15 +19,16 @@ La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de ent
 >$$
 >I \{K_P \in CED\} \cup D \rightarrow \text{Incluidos en la tabla del CED}
 >$$
->Por lo que la tabla $I$ no sería necesaria, es decir, se obvia el realizar una tabla para relación.
+>Por lo que la tabla $I$ no sería necesaria, es decir, se obvia el realizar una tabla para relación. Esto es así, ya que el conjunto de entidades débiles tiene en su tabla un atributo que hace referencia a la clave primaria de el conjunto de entidades propietarias. 
 
+- Un ***conjunto de entidades débiles*** se representa como una tabla con una columna por cada atributo de la entidad, y además, contendrá una columna extra para la *clave primaria* de la entidad fuerte que lo identifica.
 - Una relación $R$ entre los conjuntos de entidades $A$, $B$, $C$, se representa como una tabla $R$, con una columna por cada atributo de $R \{a_1, \dotsm , a_n\} \cup \{K_A, K_B, K_C\}$, donde $K_A$, $K_B$, $K_C$, son los atributos que forman las claves primarias de los conjuntos de entidades $A$, $B$ y $C$ respectivamente.
-- Para las relaciones varios a varios, va a existir una tabla para cada conjunto de entidades pertenecientes a la relación y una tabla con el nombre de la relación, cuyos componentes serán las claves primarias de los conjuntos de entidades participantes de dicha relación.
+- Para las relaciones varios a varios, va a existir una tabla para cada conjunto de entidades pertenecientes a la relación y una tabla con el nombre de la relación, cuyos componentes serán las claves primarias de los conjuntos de entidades participantes de dicha relación y los atributos propios de la relación si es que esta posee atributos.
 - Para las relaciones de varios a uno y de uno a varios con pertenencia total, se crearán dos tablas, de la cual una de ellas contendrá todos los atributos de la relación, agregando para cada entidad un atributo extra que representaría la clave primaria de la entidad con la que se está relacionando.
 
 ![[varios-uno.png]]
 
-- Para las relaciones uno a uno con participación total de ambos lados y en las relaciones uno a unos normales, se crearán dos tablas que contendrán todos sus atributos correspondientes. Una de esas tablas tendrá un atributo más que será la clave primaria del otro conjunto de entidades con el que se esta relacionando. Cabe aclarar que la decisión de qué entidad contendrá la clave foránea va a depender del dominio del problema y de la regla de normalización que apliquemos.
+- Para las relaciones uno a uno con participación total de ambos lados y en las relaciones uno a unos normales, se crearán dos tablas que contendrán todos los atributos correspondientes de cada conjunto de entidades. Una de esas tablas tendrá un atributo más que será la clave primaria del otro conjunto de entidades con el que se esta relacionando. Cabe aclarar que la decisión de qué entidad contendrá la clave foránea va a depender del dominio del problema y de la reglas de normalización que apliquemos.
 
 ![[uno-uno-total.png]]
 
