Estoy cansado jefe | DB

--- a/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
+++ b/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
@@ -1,5 +1,4 @@
-El modelo de entidad-relación se basa en la percepción del mundo real que consiste de un conjunto de objetos básicos llamados entidades y de relaciones entre esas entidades.
-Una ***entidad*** no es más que una cosa u objeto del mundo real que es distinguido entre los demás objetos. Por ejemplo, una persona, una empresa, entre otros. Por otro lado, se denomina ***conjunto de entidades*** a las agrupaciones de entidades de un mismo tipo. Por ejemplo, el conjunto de todas las personas, o de todas las empresas.
+El modelo de entidad-relación se basa en la percepción del mundo real que consiste de un conjunto de objetos básicos llamados entidades y de relaciones entre esas entidades. Una ***entidad*** no es más que una cosa u objeto del mundo real que es distinguido entre los demás objetos. Por ejemplo, una persona, una empresa, entre otros. Por otro lado, se denomina ***conjunto de entidades*** a las agrupaciones de entidades de un mismo tipo. Por ejemplo, el conjunto de todas las personas, o de todas las empresas.
 Las entidades se representan mediante un conjunto de *atributos*, estos atributos describen propiedades que posee cada miembro de un conjunto de entidades y pueden ser de distintos tipos:
 
 - Simples y Compuestos
