--- a/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
+++ b/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
@@ -8,7 +8,7 @@ Por otro lado, la generalización es un proceso de diseño bottom-up donde se co
 Ya sea en la especialización o generalización, los conjuntos de entidades de menor nivel heredan todos los atributos y participan en todas las relaciones del conjunto de entidades de nivel superior.
 
 >[!tldr] Diferencias entre Especialización y Generalización
->Especialización y generalización son simples inversiones, estas son representadas en un diagrama E-R de la misma forma, a través de un triángulo invertido. La diferencia entre ambos radica en la forma de establecer la relación entre los distintos niveles de entidades.
+>Especialización y generalización son simples invenciones, estas son representadas en un diagrama E-R de la misma forma, a través de un triángulo invertido. La diferencia entre ambos radica en la forma de establecer la relación entre los distintos niveles de entidades.
 
 ### Diseño de Restricciones en las Generalizaciones y Especializaciones
 
